src/main.css
:root {
  /* --root-background: rgb(37, 37, 37); */
  --root-background: url("/screen_macos_desktop_light.jpg") no-repeat center center fixed;
  ;
  --background-color: rgba(255, 255, 255, 0.65);
  --font-color: rgba(0, 0, 0, 0.85);
  --font-sub-color: rgba(0, 0, 0, 0.55);
  --font-hover-color: #0090ff;
}

@media (prefers-color-scheme: dark) {
  :root {
    /* --root-background: rgb(221, 221, 221); */
    --root-background: url("/screen_macos_desktop_dark.jpg") no-repeat center center fixed;
    ;
    --background-color: rgba(0, 0, 0, 0.45);
    --font-color: rgba(255, 255, 255, 0.85);
    --font-sub-color: rgba(255, 255, 255, 0.55);
  }
}

body {
  background: var(--root-background);
  color: var(--font-color);
  -webkit-transition: all .3s;
  transition: all .3s;
}

.wrapper {
  margin-top: 30px;
  margin-left: 30px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.wrapper {
  font-family: Montserrat, sans-serif;
  width: 300px;
  opacity: calc(1);
  background-color: var(--background-color) !important;
  padding: 24px 24px 15px 24px;
  border-radius: 10px;
  color: var(--font-color);
}

.settingsWrapper {
  position: absolute;
  top: 0;
  right: 0;
  backdrop-filter: blur(5px);
  -webkit-backdrop-filter: blur(5px);
  background-color: rgba(255, 255, 255, 0.5);
  /* 铺满页面 */
  width: 100%;
  height: 100%;
  /* 铺满页面 */
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-transition: all .4s;
  transition: all .4s;
  z-index: 999;
  overflow: scroll;
  /* height: 100vh; */
}

.settings {
  /* 直接盖在上方 */
  position: absolute;
  top: 0px;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 999;
  opacity: calc(0);
  -webkit-transition: all .4s;
  transition: all .4s;
  backdrop-filter: blur(20px);
  overflow: scroll;
  bottom: 0;
  width: auto;
}

.show {
  opacity: calc(1);
  -webkit-transform: translateY(0);
  transform: translateY(0);
}

.hide {
  opacity: calc(0);
  -webkit-transform: translateY(100px);
  transform: translateY(100px);
}

@media (prefers-color-scheme: dark) {
  .settingsWrapper {
    background-color: rgba(0, 0, 0, 0.5);
  }
  .settings.show {
    opacity: calc(0.9);
  }
  
}

.header {
  margin-bottom: 20px;
  display: flex;
  align-items: center;
}

.header .svg {
  margin-left: auto;
  margin-top: 2px;
  opacity: .5;
  transition: all .3s;
  cursor: pointer;
}

.header .svg:hover {
  opacity: 1;
}

.appItem {
  display: flex;
  align-items: center;
  width: 100%;
  margin-bottom: 20px;
  text-decoration: unset;
  color: var(--font-color);
  -webkit-transition: all .3s;
  transition: all .3s;
}

.appItem div {
  flex: 1;
}

.appItem h5 {
  margin: 3px 0 5px 0;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.appItem h5:hover {
  color: var(--font-hover-color);
}

.appItem p {
  font-size: 12px;
  margin: 0;
  opacity: .6;
}

.title {
  font-size: 16px;
  margin: 0;
}

.title span, .tips {
  font-size: 12px;
  margin-left: 15px;
  font-weight: normal;
  opacity: .5;
}


.setting {
  margin-top: 20px;
  display: flex;
  align-items: center;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.setting span {
  margin-left: 10px;
  font-size: 12px;
  opacity: .5;
}

.setting span:hover {
  opacity: 1;
}

textarea, input {
  transition: all .3s;
  border: none;
  outline: none;
}


.setting textarea {
  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
  width: 100%;
  height: 100px;
  margin-top: 10px;
  padding: 10px;
  border: 1px solid rgba(0, 0, 0, 0.1);
  border-radius: 5px;
  background-color: rgba(0, 0, 0, 0.05);
  color: var(--font-color);
  font-size: 12px;
  resize: none;
}

.setting input {
  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
  width: 100%;
  height: 30px;
  margin-top: 10px;
  padding: 0 10px;
  border: 1px solid rgba(0, 0, 0, 0.1);
  border-radius: 5px;
  background-color: rgba(0, 0, 0, 0.05);
  color: var(--font-color);
  font-size: 12px;
}

textarea:focus, input:focus {
  /* 稍微变黑 */
  outline: none;
  border: 1px solid rgba(0, 0, 0, 0.618);
}

:disabled {
  opacity: .5;
}

:disabled:hover {
  opacity: 1;
}

.settingsList {
  display: flex;
  flex-wrap: wrap;
  margin-top: 20px;
  flex-direction: row;
}

.settingsList > div {
  width: 50%;
  margin-bottom: 20px;
}

.label {
  position: relative;
}

.label:before {
  content: attr(data-label);
  font-size: 12px;
  opacity: 0;
  margin-left: 5px;
  background-color: rgba(0, 0, 0, 0.1);
  padding: 5px 10px;
  border-radius: 5px;
  position: absolute;
  top: -30px;
  left: 50%;
  transform: translate(-50%);
  text-align: center;
  width: 50px;
  transition: all .5s;
}

.label:hover:before {
  opacity: 1;
}

